// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<Navbar /> should render <LoggedInLinks /> if user is logged in 1`] = `
<DocumentFragment>
  .c0 {
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  background-color: #FAFAFA;
  box-shadow: 0 1px 5px rgba(0,0,0,0.3);
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  left: 0;
  padding: 0.8rem 3.6rem;
  position: fixed;
  top: 0;
  width: 100%;
  z-index: 10000;
}

.c0 > *:not(:last-child) {
  margin-right: 3.6rem;
}

.c3 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  max-width: 100%;
  width: 45rem;
}

.c3 .name-input {
  background-color: #FAFAFA;
  border: 1px solid #BFBFBF;
  font-size: 1.5rem;
  outline: none;
  padding: 0.8rem;
  width: 100%;
}

.c4 {
  box-shadow: 0 0 3px rgba(0,0,0,0.03);
  border-radius: 1px;
  cursor: pointer;
  font-weight: 700;
  line-height: 1.2;
  -webkit-letter-spacing: 2px;
  -moz-letter-spacing: 2px;
  -ms-letter-spacing: 2px;
  letter-spacing: 2px;
  outline: none;
  position: relative;
  text-align: center;
  text-transform: uppercase;
  -webkit-transition: all 0.1s;
  transition: all 0.1s;
  font-size: 1.4rem;
  padding: 0.8rem 1.2rem;
  background-color: #1E8BC3;
  border: 2px solid #1E8BC3;
  color: #fff;
}

.c4:hover {
  background-color: #22A7F0;
  border-color: #22A7F0;
}

.c9 {
  display: inline-block;
  font-style: normal;
  font-weight: normal;
  -webkit-letter-spacing: 0px;
  -moz-letter-spacing: 0px;
  -ms-letter-spacing: 0px;
  letter-spacing: 0px;
  margin-bottom: 0;
  margin-left: 0;
  margin-right: 0.8rem;
  overflow: hidden;
  text-overflow: ellipsis;
  white-space: nowrap;
  text-align: right;
  font-size: 1.5rem;
  max-width: 15rem;
}

.c7 {
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
}

.c7 > svg {
  -webkit-transform: rotate(0deg);
  -ms-transform: rotate(0deg);
  transform: rotate(0deg);
  -webkit-transition: -webkit-transform 0.2s;
  -webkit-transition: transform 0.2s;
  transition: transform 0.2s;
  fill: #777;
  width: 3.4rem;
  height: 3.4rem;
}

.c10 {
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
}

.c10 > svg {
  -webkit-transform: rotate(0deg);
  -ms-transform: rotate(0deg);
  transform: rotate(0deg);
  -webkit-transition: -webkit-transform 0.2s;
  -webkit-transition: transform 0.2s;
  transition: transform 0.2s;
  fill: #777;
  width: 1.7rem;
  height: 1.7rem;
  -webkit-transform: rotate(90deg);
  -ms-transform: rotate(90deg);
  transform: rotate(90deg);
}

.c6 {
  position: relative;
}

.c5 {
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
}

.c5 > *:not(:last-child) {
  margin-right: 3.6rem;
}

.c8 {
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  cursor: pointer;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  padding: 0.8rem 0;
  position: relative;
}

.c2 {
  font-family: Lobster,cursive;
  font-size: 3.3rem;
  -webkit-letter-spacing: 1px;
  -moz-letter-spacing: 1px;
  -ms-letter-spacing: 1px;
  letter-spacing: 1px;
  text-shadow: 0 0 3px rgba(0,0,0,0.3);
  margin-top: 0;
  text-align: left;
}

.c1 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
}

.c1 .logo {
  width: 4.6rem;
  height: 4.6rem;
  margin-right: 0.8rem;
}

@media only screen and (max-width:75em) {
  .c0 .heading {
    display: none;
  }
}

@media only screen and (max-width:56.25em) {
  .c0 {
    padding: 0.8rem 2.4rem;
  }

  .c0 > *:not(:last-child) {
    margin-right: 2.4rem;
  }
}

@media only screen and (max-width:37.5em) {
  .c0 {
    -webkit-flex-wrap: wrap;
    -ms-flex-wrap: wrap;
    flex-wrap: wrap;
    -webkit-box-pack: justify;
    -webkit-justify-content: space-between;
    -ms-flex-pack: justify;
    justify-content: space-between;
  }

  .c0 > *:nth-child(2) {
    margin-right: 0;
    margin-top: 0.8rem;
    width: 100%;
  }
}

@media only screen and (max-width:37.5em) {
  .c3 {
    -webkit-order: 2;
    -ms-flex-order: 2;
    order: 2;
  }
}

@media only screen and (max-width:56.25em) {
  .c5 > *:not(:last-child) {
    margin-right: 2.4rem;
  }
}

<header
    class="c0"
    data-testid="Navbar"
  >
    <a
      data-testid="Navbar-header-link"
    >
      <header
        class="c1"
      >
        <img
          alt="E-Shopping"
          class="logo"
          src="logo.png"
        />
        <h1
          class="c2 heading"
          font-size="small"
        >
          shopping
        </h1>
      </header>
    </a>
    <form
      class="c3"
    >
      <input
        autocomplete="off"
        class="name-input"
        data-testid="SearchForm-input"
        maxlength="150"
        name="product"
        spellcheck="false"
        type="text"
        value=""
      />
      <button
        aria-label="Search"
        class="c4"
        color="blue"
        type="submit"
      >
        search
      </button>
    </form>
    <nav
      class="c5"
      data-testid="LoggedInLinks"
    >
      <a
        class="c6"
        data-testid="CartLink"
      >
        <div
          class="c7"
          color=""
        >
          <svg>
            cart.svg
          </svg>
        </div>
      </a>
      <div
        class="c8"
        data-testid="LoggedInLinks-user-box"
        id="user"
      >
        <span
          class="c9"
          color=""
          display="inline-block"
          overflow="hidden"
          size="3"
          spacing="0px"
          transform=""
        >
          username
        </span>
        <div
          class="c10"
          color=""
        >
          <svg>
            arrow.svg
          </svg>
        </div>
        <div />
      </div>
    </nav>
  </header>
</DocumentFragment>
`;

exports[`<Navbar /> should render <LoggedOutLinks /> if user is logged out 1`] = `
<DocumentFragment>
  .c0 {
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  background-color: #FAFAFA;
  box-shadow: 0 1px 5px rgba(0,0,0,0.3);
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  left: 0;
  padding: 0.8rem 3.6rem;
  position: fixed;
  top: 0;
  width: 100%;
  z-index: 10000;
}

.c0 > *:not(:last-child) {
  margin-right: 3.6rem;
}

.c3 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  max-width: 100%;
  width: 45rem;
}

.c3 .name-input {
  background-color: #FAFAFA;
  border: 1px solid #BFBFBF;
  font-size: 1.5rem;
  outline: none;
  padding: 0.8rem;
  width: 100%;
}

.c4 {
  box-shadow: 0 0 3px rgba(0,0,0,0.03);
  border-radius: 1px;
  cursor: pointer;
  font-weight: 700;
  line-height: 1.2;
  -webkit-letter-spacing: 2px;
  -moz-letter-spacing: 2px;
  -ms-letter-spacing: 2px;
  letter-spacing: 2px;
  outline: none;
  position: relative;
  text-align: center;
  text-transform: uppercase;
  -webkit-transition: all 0.1s;
  transition: all 0.1s;
  font-size: 1.4rem;
  padding: 0.8rem 1.2rem;
  background-color: #1E8BC3;
  border: 2px solid #1E8BC3;
  color: #fff;
}

.c4:hover {
  background-color: #22A7F0;
  border-color: #22A7F0;
}

.c6 {
  box-shadow: 0 0 3px rgba(0,0,0,0.03);
  border-radius: 1px;
  cursor: pointer;
  font-weight: 700;
  line-height: 1.2;
  -webkit-letter-spacing: 2px;
  -moz-letter-spacing: 2px;
  -ms-letter-spacing: 2px;
  letter-spacing: 2px;
  outline: none;
  position: relative;
  text-align: center;
  text-transform: uppercase;
  -webkit-transition: all 0.1s;
  transition: all 0.1s;
  font-size: 1.4rem;
  padding: 0.8rem 1.2rem;
  background-color: transparent;
  border: 2px solid #1E8BC3;
  color: #1E8BC3;
}

.c6:hover {
  border-color: #22A7F0;
  color: #22A7F0;
}

.c5 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
  -webkit-flex-wrap: nowrap;
  -ms-flex-wrap: nowrap;
  flex-wrap: nowrap;
  margin-top: 0;
  margin-right: 0;
  margin-bottom: 0;
  margin-left: 0;
  width: auto;
}

.c5 > *:not(:last-child) {
  margin-right: 2.4rem;
}

.c2 {
  font-family: Lobster,cursive;
  font-size: 3.3rem;
  -webkit-letter-spacing: 1px;
  -moz-letter-spacing: 1px;
  -ms-letter-spacing: 1px;
  letter-spacing: 1px;
  text-shadow: 0 0 3px rgba(0,0,0,0.3);
  margin-top: 0;
  text-align: left;
}

.c1 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
}

.c1 .logo {
  width: 4.6rem;
  height: 4.6rem;
  margin-right: 0.8rem;
}

@media only screen and (max-width:75em) {
  .c0 .heading {
    display: none;
  }
}

@media only screen and (max-width:56.25em) {
  .c0 {
    padding: 0.8rem 2.4rem;
  }

  .c0 > *:not(:last-child) {
    margin-right: 2.4rem;
  }
}

@media only screen and (max-width:37.5em) {
  .c0 {
    -webkit-flex-wrap: wrap;
    -ms-flex-wrap: wrap;
    flex-wrap: wrap;
    -webkit-box-pack: justify;
    -webkit-justify-content: space-between;
    -ms-flex-pack: justify;
    justify-content: space-between;
  }

  .c0 > *:nth-child(2) {
    margin-right: 0;
    margin-top: 0.8rem;
    width: 100%;
  }
}

@media only screen and (max-width:37.5em) {
  .c3 {
    -webkit-order: 2;
    -ms-flex-order: 2;
    order: 2;
  }
}

<header
    class="c0"
    data-testid="Navbar"
  >
    <a
      data-testid="Navbar-header-link"
    >
      <header
        class="c1"
      >
        <img
          alt="E-Shopping"
          class="logo"
          src="logo.png"
        />
        <h1
          class="c2 heading"
          font-size="small"
        >
          shopping
        </h1>
      </header>
    </a>
    <form
      class="c3"
    >
      <input
        autocomplete="off"
        class="name-input"
        data-testid="SearchForm-input"
        maxlength="150"
        name="product"
        spellcheck="false"
        type="text"
        value=""
      />
      <button
        aria-label="Search"
        class="c4"
        color="blue"
        type="submit"
      >
        search
      </button>
    </form>
    <div
      class="c5"
      data-testid="LoggedOutLinks"
      direction="row"
      spacing="3"
      width="auto"
      wrap="nowrap"
    >
      <button
        class="c6"
        color="blue"
        type="button"
      >
        login
      </button>
      <button
        class="c4"
        color="blue"
        type="button"
      >
        signup
      </button>
    </div>
  </header>
</DocumentFragment>
`;
